<package>
  <name>rqt</name>
  <version>0.4.8</version>
  <description>rqt is a Qt-based framework for GUI development for ROS. It consists of three parts/metapackages<br />
    <ul>
     <li>rqt (you're here)</li>
     <li><a href = "http://ros.org/wiki/rqt_common_plugins">rqt_common_plugins</a> - ROS backend tools suite that can be used on/off of robot runtime.</li>
     <li><a href = "http://ros.org/wiki/rqt_robot_plugins">rqt_robot_plugins</a> - Tools for interacting with robots during their runtime.</li>
    </ul>
   rqt metapackage provides a widget <a href = "http://ros.org/wiki/rqt_gui">rqt_gui</a> that enables multiple `rqt` widgets to be docked in a single window.
  </description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>
  <author>Dorian Scholz</author>
  <author>Aaron Blasdel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_cpp</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
