<package format="2">
  <name>rqt</name>
  <version>1.3.0</version>
  <description>rqt is a Qt-based framework for GUI development for ROS.</description>

  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rqt</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Aaron Blasdel</author>
  <author>Dirk Thomas</author>
  <author>Dorian Scholz</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <exec_depend version_gte="0.3.0">rqt_gui</exec_depend>
  <exec_depend version_gte="0.3.0">rqt_gui_cpp</exec_depend>
  <exec_depend version_gte="0.3.0">rqt_gui_py</exec_depend>
  <exec_depend>rqt_py_common</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
