<package>
  <name>rqt_console</name>
  <version>0.2.3</version>
  <description>rqt_console provides a GUI plugin for displaying and filtering ROS messages.</description>
  <maintainer email="ablasdel@willowgarage.com">Aaron Blasdel</maintainer>
  <author email="ablasdel@willowgarage.com">Aaron Blasdel</author>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_console</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Aaron Blasdel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
