<package>
  <name>rqt_dep</name>
  <version>0.1.7</version>
  <description>rqt_dep provides a GUI plugin for visualizing the ROS dependency graph.</description>
  <maintainer email="ablasdel@willowgarage.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_dep</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Thibault Kruse</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rqt_graph</run_depend>
  <run_depend>rqt_gui</run_depend>
  <test_depend>qt_dotgraph</test_depend>
  <test_depend>qt_gui_py_common</test_depend>
  <test_depend>rqt_graph</test_depend>
  <test_depend>rqt_gui</test_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

