<package>
  <name>rqt_graph</name>
  <version>0.1.7</version>
  <description>rqt_graph provides a GUI plugin for visualizing the ROS computation graph.</description>
  <maintainer email='ablasdel@willowgarage.com'>Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_graph</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rqt_gui</build_depend>
  <build_depend>qt_dotgraph</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rosnode</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rosservice</build_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>qt_dotgraph</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rosnode</run_depend>
  <run_depend>rorostopic</run_depend>
  <run_depend>rosservice</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>

