<package format="2">
  <name>rqt_gui_cpp</name>
  <version>1.0.6</version>
  <description>rqt_gui_cpp enables GUI plugins to use the C++ client library for ROS.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_gui_cpp</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend version_gte="0.3.0">qt_gui</build_depend>
  <build_depend version_gte="0.3.0">qt_gui_cpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
