<package format="3">
  <name>rqt_gui_cpp</name>
  <version>0.5.3</version>
  <description>rqt_gui_cpp enables GUI plugins to use the C++ client library for ROS.</description>
  <maintainer email="dharini@openrobotics.org">Dharini Dutia</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rqt_gui_cpp</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>
  <author>Dirk Thomas</author>
  <author email="michael.jeronimo@openrobotics.org">Michael Jeronimo</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <build_depend version_gte="0.3.0">qt_gui</build_depend>
  <build_depend version_gte="0.3.0">qt_gui_cpp</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nodelet</build_depend>

  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend version_gte="0.3.0">qt_gui_cpp</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>nodelet</exec_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lrqt_gui_cpp"/>
    <qt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
