<package>
  <name>rqt_gui_py</name>
  <version>0.2.14</version>
  <description>rqt_gui_py enables GUI plugins to use the Python client library for ROS.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_gui_py</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qt_gui</build_depend>
  <build_depend>rqt_gui</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend version_gte="0.2.17">qt_gui</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rospy</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
