<package format="2">
  <name>rqt_gui_py</name>
  <version>0.5.0</version>
  <description>rqt_gui_py enables GUI plugins to use the Python client library for ROS.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_gui_py</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend version_gte="0.3.0">qt_gui</build_depend>
  <build_depend version_gte="0.3.0">rqt_gui</build_depend>

  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
  <exec_depend version_gte="0.3.0">rqt_gui</exec_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
