<package>
  <name>rqt_logger_level</name>
  <version>0.1.7</version>
  <description>rqt_logger_level provides a GUI plugin for configuring the logger level of ROS nodes.</description>
  <maintainer email="ablasdel@willowgarage.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_logger_level</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author email="ablasdel@willowgarage.com">Aaron Blasdel</author>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>rospy</test_depend>
  <test_depend>rqt_gui</test_depend>
  <test_depend>rqt_gui_py</test_depend>

  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>

  <export>
      <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>


