<package>
  <name>rqt_nav_view</name>
  <version>0.2.1</version>
  <description>rqt_nav_view provides a gui for viewing navigation maps and paths.</description>
  <maintainer email="zklapow@willowgarage.com">Ze'ev Klapow</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_nav_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Ze'ev Klapow</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>tf</run_depend>
  
  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>

</package>


