<package>
  <name>rqt_plot</name>
  <description>rqt_plot provides a GUI plugin visualizing numeric values in a 2D plot using different plotting backends.</description>
  <maintainer email='scholz@sim.tu-darmstadt.de'>Dorian Scholz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_plot</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>rqt_py_common</build_depend>
  <build_depend>qt_gui_py_common</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>rosgraph</build_depend>
  <build_depend>python-qt-bindings-qwt5</build_depend>
  <build_depend>python-matplotlib</build_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>python-qt-bindings-qwt5</run_depend>
  <run_depend>python-matplotlib</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
